# phoenix-raytracer

./: COPYING  Cargo.toml  README.md
lib/: color.rs  frandom.rs  infra.rs  light.rs  mod.rs  model.rs  point.rs  ray.rs  thing.rs  xform.rs
lib/lights/: mod.rs  point_light.rs
lib/outputs/: mod.rs  ppm_raw.rs
lib/shapes/: mod.rs  poly.rs  rect.rs  shape.rs  sphere.rs
lib/textures/: board_texture.rs  flat.rs  flat_texture.rs  mod.rs  texture.rs
src/: color.rs  frandom.rs  infra.rs  lib.rs  main.rs  model.rs  point.rs  ray.rs  render.rs  thing.rs  xform.rs
src/lights/: mod.rs  point_light.rs
src/outputs/: mod.rs  ppm_raw.rs
src/shapes/: mod.rs  poly.rs  sphere.rs
src/textures/: board_texture.rs  mod.rs  solid_texture.rs
