# Copyright © 1991 Bart Massey
# [This program is licensed under the "3-clause ('new') BSD License"]
# Please see the file COPYING in the source
# distribution of this software for license terms.

[package]
name = "raytracer"
version = "0.1.0"
authors = ["Bart Massey <bart@cs.pdx.edu>"]
publish = false
description = "Raytracer in Rust."
repository = ""
readme = "README.md"
license = "MIT"

[lib]
name = "rt"
path = "lib/mod.rs"
