[package]
name = "rt"
version = "0.2.0"
authors = ["Bart Massey <bart@cs.pdx.edu>"]
publish = false
description = "Raytracer in Rust."
repository = "http://github.com/BartMassey/phoenix-raytracer"
readme = "README.md"
license-file = "COPYING"
edition = "2021"

[dependencies.clap]
version = "4.0.32"
features = ["derive", "wrap_help"]

[dependencies]
nalgebra = "0.32.1"
rayon = "1.6.1"
